# ai-engineering-from-scratch

./: .gitignore  README.md  README.zh-CN.md  TRANSLATION.zh-CN.md  pyproject.toml
.agents/: AGENTS.md
.agents/skills/check-understanding/: SKILL.md
.agents/skills/chinese-comments/: SKILL.md
.agents/skills/docs-output-routing/: SKILL.md
.agents/skills/find-your-level/: SKILL.md
.github/workflows/: deploy.yml
glossary/: terms.zh-CN.md
phases/00-setup-and-tooling/01-dev-environment/: quiz.zh-CN.json
phases/00-setup-and-tooling/02-git-and-collaboration/: quiz.zh-CN.json
phases/00-setup-and-tooling/03-gpu-setup-and-cloud/: quiz.zh-CN.json
phases/00-setup-and-tooling/04-apis-and-keys/: quiz.zh-CN.json
phases/00-setup-and-tooling/05-jupyter-notebooks/: quiz.zh-CN.json
phases/00-setup-and-tooling/06-python-environments/: quiz.zh-CN.json
phases/00-setup-and-tooling/07-docker-for-ai/: quiz.zh-CN.json
phases/00-setup-and-tooling/08-editor-setup/: quiz.zh-CN.json
phases/00-setup-and-tooling/09-data-management/: quiz.zh-CN.json
phases/00-setup-and-tooling/10-terminal-and-shell/: quiz.zh-CN.json
phases/00-setup-and-tooling/11-linux-for-ai/: quiz.zh-CN.json
phases/00-setup-and-tooling/12-debugging-and-profiling/: quiz.zh-CN.json
phases/01-math-foundations/01-linear-algebra-intuition/: quiz.zh-CN.json
phases/02-ml-fundamentals/14-naive-bayes/: quiz.zh-CN.json
scripts/: audit_translations.py
site/: CNAME  about.html  app.js  build.js  catalog.html  cmdpalette.js  data.js  glossary.html  header.js  index.html  lesson.html  prereqs.html  style.css
(+1328 files in other folders)
